
Bugfixes
--------

* Fixed bug that broke WebDAV access for five:defaultViewable objects. The
  __browser_default__ now modifies only GET and POST requests.

* Fixed some event recursion compatibility modes.

* Fixed loops in zcml loading due to events in some cases.

* Made Five send a ContainerModifiedEvent when appropriate.

Restructuring
-------------

* Cleaned up security test.

Five 1.2b (2005-11-02)
======================

Features
--------

* Added IMarkerInterfaces adapter: This adapter provides methods for
  inspecting and assigning marker interfaces. 'edit-markers.html' (or
  'manage_interfaces' in the ZMI) allows to change the behavior of specific
  objects by adding or removing marker interfaces TTW.

* Added the five:registerClass directive: This does the necessary Zope 2
  registration for Five-based content. It is no longer necessary to add an
  ``initialize()`` function to the product's __init__ in order to register
  a meta type to be addable through the ZMI. See doc/products/ViewsTutorial
  for an example how to use the directive.

* Local site support: Five has now support for creating local sites
  and thereby local utilities. This is mostly needed for allowing CMF
  to convert it's portal tools into local utilities.  See
  doc/localsite.txt for more information

* Event support: When ``<five:containerEvents/>`` is specified, Five
  makes the standard Zope 2 containers send events instead of using
  manage_afterAdd, manage_beforeDelete and manage_afterClone. These
  methods are still called for a class declared
  ``<five:deprecatedManageAddDelete class=.../>``, and are called in
  compatibility mode with a deprecation warning for classes that don't
  use this directive.

Restructuring
-------------

* Removed backwards compatibility for Five 1.0 Zope core interfaces.

* Removed backwards compatibility for Zope 2.7 and 2.8.0.

* Added a (temporarily) forked copy of the "new-and-improved" test